--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,10 +16,27 @@
   @apply bg-slate-200 rounded-full
 }
 
+
+
 body {
   @apply bg-slate-200
 }
 
+@layer utilities {
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+}
 
 
 @tailwind base;
